--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "inspect": "vue inspect > output.js",
+    "preview": "cross-env BUILD_MODE=preview vue-cli-service build",
     "update": "npm --registry https://registry.npmjs.org install @jx3box/jx3box-common@latest @jx3box/jx3box-common-ui@latest",
     "dev": "cross-env DEV_SERVER=true vue-cli-service serve"
   },
