--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "lint": "vue-cli-service lint",
     "inspect": "vue inspect > output.js",
     "preview": "cross-env BUILD_MODE=preview vue-cli-service build",
-    "update": "npm --registry https://registry.npmjs.org install @jx3box/jx3box-common@latest @jx3box/jx3box-common-ui@latest",
+    "update": "yarn add @jx3box/jx3box-common@latest @jx3box/jx3box-common-ui@latest",
     "dev": "cross-env DEV_SERVER=true vue-cli-service serve"
   },
   "dependencies": {
-    "@jx3box/jx3box-common": "^8.2.18",
-    "@jx3box/jx3box-common-ui": "^8.8.5",
+    "@jx3box/jx3box-common": "^8.3.1",
+    "@jx3box/jx3box-common-ui": "^8.9.7",
     "axios": "^0.21.1",
     "core-js": "^3.4.3",
     "dayjs": "^1.11.4",
