--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "node+": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "inspect": "vue inspect > output.js",
     "preview": "cross-env BUILD_MODE=preview vue-cli-service build",
     "update": "yarn add @jx3box/jx3box-common@latest @jx3box/jx3box-common-ui@latest",
